Compiler/tests/bad/array3.nx
type t : array (0 - 5) of [minint .. maxint];
